Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignTextObject.quorum
class Main
    action Main
        Object v
    text t = "text"
        v:SetValue("text")
        Test(v)
    end

    action Test(text var)
    end
end
